# aru-unfolding

./: CMakeLists.txt  MyKernel.h  README.md  unfold.py  utils.py
CMakeModules/: FindNlopt.cmake  FindRoot.cmake
src/: BlobelKernel.h  FoldedSpline.h  GaussianKernel.h  LICENSE.Auger  ObjectiveFunction.h  Spline.h  Utils.h  VKernel.h
swig/: aru.i  kernel.i
tests/: blobel.py  make_toy_data.py  regfit.py
