CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ARU)

SET(CMAKE_BUILD_TYPE "Release" CACHE STRING foo FORCE)

IF (DEFINED ENV{CXXFLAGS})
  SET (CMAKE_CXX_FLAGS $ENV{CXXFLAGS} CACHE STRING foo FORCE)
  MESSAGE(STATUS "Custom build (CXXFLAGS: $ENV{CXXFLAGS})")
ELSE (DEFINED ENV{CXXFLAGS})
  SET (CMAKE_CXX_FLAGS "-O2 -pipe -pthread" CACHE STRING foo FORCE)
ENDIF (DEFINED ENV{CXXFLAGS})

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules" CACHE PATH "Module Path" FORCE)

FIND_PACKAGE (Root REQUIRED)
FIND_PACKAGE (SWIG REQUIRED)
FIND_PACKAGE (PythonLibs REQUIRED)
FIND_PACKAGE (Nlopt REQUIRED)

INCLUDE_DIRECTORIES(
  ${ROOT_INCLUDE_PATH}
  ${NLOPT_INCLUDE_PATH}
  src
  .
)

IF (${SWIG_FOUND})

  SET (SWIG_MINIMUM_VERSION "2.0")

  IF (${SWIG_VERSION} STRLESS ${SWIG_MINIMUM_VERSION})
    MESSAGE (FATAL_ERROR "SWIG-${SWIG_MINIMUM_VERSION} is required, only SWIG-${SWIG_VERSION} was found")
  ENDIF (${SWIG_VERSION} STRLESS ${SWIG_MINIMUM_VERSION})

  INCLUDE(${SWIG_USE_FILE})
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

  SET (SWIG_FILES
    swig/kernel.i
    swig/aru.i
  )

  SET_SOURCE_FILES_PROPERTIES(${SWIG_FILES} PROPERTIES CPLUSPLUS ON)

  SWIG_ADD_MODULE(kernel python swig/kernel.i MyKernel.h)
  SWIG_LINK_LIBRARIES(kernel ${PYTHON_LIBRARIES} ${ROOT_LIBRARIES})

  SWIG_ADD_MODULE(aru python swig/aru.i)
  SWIG_LINK_LIBRARIES(aru ${PYTHON_LIBRARIES} ${ROOT_LIBRARIES} ${NLOPT_LIBRARIES})
ENDIF (${SWIG_FOUND})
